@@ -34,7 +34,6 @@
 #include "flow/flow_key.h"
 #include "framework/inspector.h"
 #include "framework/plug_data.h"
-#include "normalize/normalize.h"
 #include "framework/codec.h"
 
 #define SSNFLAG_SEEN_CLIENT         0x00000001
@@ -162,12 +161,6 @@ public:
     void markup_packet_flags(Packet*);
     void set_direction(Packet*);
 
-    void set_normalizations(uint32_t m)
-    { normal_mask = m; };
-
-    bool norm_is_enabled(uint32_t b)
-    { return Normalize_IsEnabled(normal_mask, (NormFlags)b); };
-
     void set_expire(Packet*, uint32_t timeout);
     int get_expire(Packet*);
     bool expired(Packet*);
@@ -255,7 +248,6 @@ public:  // FIXIT-M privatize if possible
     sfip_t server_ip; // or uint8_t to reduce sizeof from 24 to 20
 
     uint64_t expire_time;
-    uint32_t normal_mask;
 
     int32_t iface_in;
     int32_t iface_out;
