@@ -34,6 +34,7 @@
 -- pulled in latest from Josh
 -- pulled in HI defaults patch from Bhagya
 -- refactored inspector groups
+-- moved normal_mask out of flow into inspector policy
 
 125
 -- discovered can't catch exceptions thrown from Lua to C++; need to
